# solana-haskell-sdk

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  solana-haskell-sdk.cabal
app/: Demos.hs  KeyManagement.hs  Main.hs
src/: Constants.hs
src/Account/: Types.hs
src/Core/: Account.hs  Block.hs  Compact.hs  Crypto.hs  Instruction.hs  Message.hs  Transaction.hs  TransactionBuilder.hs
src/NativePrograms/: SystemProgram.hs
src/Network/Solana/: Constants.hs  SolanaWeb3.hs  Sysvar.hs
src/Network/Solana/Core/: Account.hs  Block.hs  Compact.hs  Crypto.hs  Instruction.hs  Message.hs  Transaction.hs
src/Network/Solana/NativePrograms/: SystemProgram.hs
src/Network/Solana/RPC/: Providers.hs
src/Network/Solana/RPC/HTTP/: Account.hs  Block.hs  Chain.hs  Ledger.hs  Token.hs  Tokenomics.hs  Transaction.hs  Types.hs
src/RPC/: HTTP.hs  Providers.hs  Types.hs
src/RPC/HTTP/: Account.hs  Block.hs  Chain.hs  Ledger.hs  Token.hs  Tokenomics.hs  Transaction.hs  Types.hs
src/Transaction/: Types.hs
tmpdir/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
