cabal-version:   3.0
name:            solana-haskell-sdk
version:         0.1.0.0
synopsis:        Library for interacting with Solana blockchain.

-- A longer description of the package.
description:
  This library includes features like key generation and management,
  transaction and instruction construction, and a JSON-RPC API client. 

  This library is aimed at developers building Solana dApps, tools, or infrastructure in Haskell.

license:         Apache-2.0
license-file:    LICENSE
author:          Marius Georgescu
maintainer:      georgescumarius@live.com
copyright:       2024 Marius Georgescu
category:        Blockchain, Web3, Solana
build-type:      Simple
tested-with:     GHC ==9.6.6

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:
  CHANGELOG.md
  README.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
  ghc-options: -Wall

library
  -- Import common warning flags.
  import:           warnings

  -- Modules exported by the library.
  exposed-modules:
    Network.Solana.Constants
    Network.Solana.Core.Account
    Network.Solana.Core.Block
    Network.Solana.Core.Compact
    Network.Solana.Core.Crypto
    Network.Solana.Core.Instruction
    Network.Solana.Core.Message
    Network.Solana.Core.Transaction
    Network.Solana.NativePrograms.SystemProgram
    Network.Solana.RPC.HTTP.Account
    Network.Solana.RPC.HTTP.Block
    Network.Solana.RPC.HTTP.Chain
    Network.Solana.RPC.HTTP.Ledger
    Network.Solana.RPC.HTTP.Token
    Network.Solana.RPC.HTTP.Tokenomics
    Network.Solana.RPC.HTTP.Transaction
    Network.Solana.RPC.HTTP.Types
    Network.Solana.SolanaWeb3

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    , aeson
    , base                ^>=4.18.0.0
    , base58-bytestring
    , base64
    , binary
    , bytestring
    , containers
    , ed25519
    , either
    , extra
    , jsonrpc-tinyclient
    , mtl
    , text
    , vector
    , web3

  -- Directories containing source files.
  hs-source-dirs:   src

  -- Base language which the package is written in.
  default-language: GHC2021

executable solana-haskell-sdk
  -- Import common warning flags.
  import:           warnings

  -- .hs or .lhs file containing the Main module.
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:    Demos

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:
    , aeson
    , base                ^>=4.18.0.0
    , base64
    , mtl
    , solana-haskell-sdk
    , web3-provider

  -- Directories containing source files.
  hs-source-dirs:   app

  -- Base language which the package is written in.
  default-language: GHC2021

test-suite solana-haskell-sdk-test
  -- Import common warning flags.
  import:           warnings

  -- Base language which the package is written in.
  default-language: GHC2021

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- The interface type and version of the test suite.
  type:             exitcode-stdio-1.0

  -- Directories containing source files.
  hs-source-dirs:   test

  -- The entrypoint to the test suite.
  main-is:          Main.hs

  -- Test dependencies.
  build-depends:
    , base                ^>=4.18.0.0
    , solana-haskell-sdk

source-repository head
  type:     git
  location: https://github.com/mariusgeorgescu/solana-haskell-sdk
